--- a/MyPassword/Ressources.qrc
+++ b/MyPassword/Ressources.qrc
@@ -24,5 +24,8 @@
         <file alias="close">Icon/close.png</file>
         <file alias="settings">Icon/setting.png</file>
         <file alias="settings_grey">Icon/setting_grey.png</file>
+        <file alias="english">Icon/english.png</file>
+        <file alias="france">Icon/france.png</file>
+        <file alias="spanish">Icon/spanish.png</file>
     </qresource>
 </RCC>
