--- a/MyPassword/Ressources.qrc
+++ b/MyPassword/Ressources.qrc
@@ -29,5 +29,15 @@
         <file alias="spanish">Icon/spanish.png</file>
         <file alias="question">Icon/question.png</file>
         <file alias="question_grey">Icon/question_grey.png</file>
+        <file alias="high_theme2">Icon/high_theme2..png</file>
+        <file alias="low_theme2">Icon/low_theme2..png</file>
+        <file alias="medium_theme2">Icon/medium_theme2..png</file>
+        <file alias="very_high_theme2">Icon/very_high_theme2.png</file>
+        <file alias="very_low_theme2">Icon/very_low_theme2..png</file>
+        <file alias="high_theme3">Icon/high_theme3.png</file>
+        <file alias="low_theme3">Icon/low_theme3.png</file>
+        <file alias="medium_theme3">Icon/medium_theme3.png</file>
+        <file alias="very_high_theme3">Icon/very_high_theme3.png</file>
+        <file alias="very_low_theme3">Icon/very_low_theme3.png</file>
     </qresource>
 </RCC>
