Import data from text 1/2

--- a/MyPassword/Src/Ressources.qrc
+++ b/MyPassword/Src/Ressources.qrc
@@ -39,5 +39,6 @@
         <file alias="medium_theme3">Icon/medium_theme3.png</file>
         <file alias="very_high_theme3">Icon/very_high_theme3.png</file>
         <file alias="very_low_theme3">Icon/very_low_theme3.png</file>
+        <file alias="import">Icon/importer.png</file>
     </qresource>
 </RCC>
